--- a/index.html
+++ b/index.html
@@ -7,4 +7,21 @@
     <title>flash cards turma 2°C</title>
     <link rel="stylesheet" href="assets/style.css">
 </head>
+
+<body>
+     <main> 
+        <section id="contrainer">
+            <!-primeira pergunta -->
+            <article class="cartao">
+                <div class="cartao__conteudo">
+                  <h3>programação</h3>
+                  <div class="cartao__conteudo__quando foi a primeira guerra mundial">
+                        <p>Quando foi a primeira guerra mundial</p>
+                  </div>
+                        
+            </div>
+            </article>
+     </main>
+
+</body>
 </html>
